--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^7.1.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
