--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
