--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
-    "@mui/material": "^7.1.0",
+    "@mui/material": "^6.5.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-country-state-city": "^1.1.12",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
@@ -36,6 +37,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.3.5"
   }
 }
