--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
-    "framer-motion": "^12.23.7",
+    "framer-motion": "^12.23.11",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
+    "react-country-state-city": "^1.1.12",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
